platform/kyverno/policies/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: disallow-latest-tag

spec:
  validationFailureAction: enforce

  rules:
    - name: validate-image-tag

      match:
        any:
          - resources:
              kinds:
                - Pod
                - Deployment
                - StatefulSet
                - DaemonSet
                - Job
                - CronJob

      exclude:
        any:
          - resources:
              namespaces:
                - kyverno
                - kube-system
                - argocd
                - falco
                - monitoring                

      validate:
        message: "latest tag is not allowed"

        pattern:
          spec:
            containers:
              - image: "!*:latest"
