platform/kyverno/policies/require-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: require-limits

spec:
  validationFailureAction: enforce

  rules:
    - name: check-limits

      match:
        any:
          - resources:
              kinds:
                - Pod
                #- Deployment
                #- StatefulSet
                #- DaemonSet
                #- Job
                #- CronJob

      exclude:
        any:
          - resources:
              namespaces:
                - kyverno
                - kube-system
                - argocd
                - falco
                - monitoring                

      validate:
        message: "CPU and memory limits are required"

        pattern:
          spec:
            containers:
              - resources:
                  limits:
                    memory: "?*"
                    cpu: "?*"
