platform/kyverno/policies/require-readonly-rootfs.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: require-readonly-rootfs

spec:
  validationFailureAction: enforce

  rules:
    - name: readonly-rootfs

      match:
        any:
          - resources:
              kinds:
                - Pod

      exclude:
        any:
          - resources:
              namespaces:
                - kyverno
                - kube-system
                - argocd
                - falco
                - monitoring                

      validate:
        message: "Readonly root filesystem required"

        pattern:
          spec:
            containers:
              - securityContext:
                  readOnlyRootFilesystem: true
