platform/kyverno/policies/require-security-context.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: require-security-context

spec:
  validationFailureAction: enforce

  rules:
    - name: security-context

      match:
        any:
          - resources:
              kinds:
                - Pod
                - Deployment
                - StatefulSet
                - DaemonSet
                - Job
                - CronJob

      exclude:
        any:
          - resources:
              namespaces:
                - kyverno
                - kube-system
                - argocd
                - falco
                - monitoring                

      validate:
        message: "SecurityContext required"

        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
