platform/kyverno/policies/restrict-hostpath.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: restrict-hostpath

spec:
  validationFailureAction: enforce

  rules:
    - name: deny-hostpath

      match:
        any:
          - resources:
              kinds:
                - Pod

      exclude:
        any:
          - resources:
              namespaces:
                - kyverno
                - kube-system
                - argocd
                - falco
                - monitoring                

      validate:
        message: "HostPath volumes are forbidden"

        pattern:
          spec:
            =(volumes):
              - X(hostPath): "null"
