platform/kyverno/policies/restrict-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: restrict-privileged

spec:
  validationFailureAction: enforce

  rules:
    - name: privileged-disabled

      validate:
        message: "Privileged containers are forbidden"

        pattern:
          spec:
            containers:
              - securityContext:
                  privileged: false
