platform/kyverno/policies/verify-image-signature.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: verify-image-signature

spec:
  validationFailureAction: enforce

  background: false

  webhookTimeoutSeconds: 30

  rules:
    - name: verify-signature

      match:
        any:
          - resources:
              kinds:
                - Pod

      verifyImages:
        - imageReferences:
            - "ghcr.io/tqnhu4/*"

          mutateDigest: true

          attestors:
            - entries:
                - keys:
                    publicKeys: |-
                      -----BEGIN PUBLIC KEY-----
                      YOUR_PUBLIC_KEY
                      -----END PUBLIC KEY-----
